@@ -1,8 +1,9 @@
 ---
 
 * [Sec 3042] Broadcast Interleave.  HStenn.
-* [Sec 3043]  Autokey association reset. perlinger@ntp.org, stenn@ntp.org
-  (fixes [Sec 3044] and [Sec 3045], too)
+* [Sec 3043] Autokey association reset.  perlinger@ntp.org, stenn@ntp.org
+  - fixes [Sec 3044] (partially) and [Sec 3045], too.
+* [Sec 3044] Spoofed server packets are partially processed.  HStenn.
 * [Sec 3046] CRYPTO_NAK crash.  stenn@ntp.org
 * [Bug 3038] NTP fails to build in VS2015. perlinger@ntp.org
   - provide build environment
